force-app/main/default/objects/WorkOrder/fields/Cert_Delivery_Mode__c.field-meta.xml
<CustomField>
    <fullName>Cert_Delivery_Mode__c</fullName>
    <label>Cert Delivery Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Attach to PO Email</label>
            </value>
            <value>
                <fullName>Separate</fullName>
                <label>Send Separately</label>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>