force-app/main/default/objects/WorkOrder/fields/Follow_Up_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Assigned_To__c</fullName>
    <label>Follow-Up Assigned To</label>
    <description>User assigned to handle the follow-up action identified by the Service Priority Dashboard.</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Follow-Up Assignments</relationshipLabel>
    <relationshipName>FollowUpAssignments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>