force-app/main/default/objects/WorkOrder/fields/Follow_Up_Status__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Status__c</fullName>
    <label>Follow-Up Status</label>
    <description>Tracks the resolution status of follow-up actions identified by the Service Priority Dashboard.</description>
    <type>Picklist</type>
    <picklist>
        <picklistValues>
            <fullName>Needs Review</fullName>
            <default>true</default>
        </picklistValues>
        <picklistValues>
            <fullName>In Progress</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Resolved</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>No Action Needed</fullName>
        </picklistValues>
    </picklist>
</CustomField>