force-app/main/default/objects/WorkOrder/fields/Priority_Override__c.field-meta.xml
<CustomField>
    <fullName>Priority_Override__c</fullName>
    <label>Priority Override</label>
    <description>Manual override of the auto-detected follow-up priority on the Service Priority Dashboard.</description>
    <type>Picklist</type>
    <picklist>
        <picklistValues>
            <fullName>Urgent</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>High</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Medium</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Low</fullName>
        </picklistValues>
    </picklist>
</CustomField>