force-app/main/default/objects/WorkOrder/fields/Tax_Exempt_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempt_Contact_Email__c</fullName>
    <label>Tax Exempt Contact Email</label>
    <type>Email</type>
</CustomField>