force-app/main/default/objects/WorkOrder/fields/Tax_Exempt_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempt_Contact_Name__c</fullName>
    <label>Tax Exempt Contact Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>