force-app/main/default/objects/WorkOrder/fields/Tax_Exempt_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempt_Purchase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Exempt Purchase</label>
    <type>Checkbox</type>
</CustomField>